--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.essejose.artederua">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.apps.photos.permission.GOOGLE_PHOTOS" />
@@ -100,7 +101,7 @@
         <activity
             android:name=".FullImageActivity"
             android:theme="@style/splashScreenTheme" />
-        <activity android:name=".AboutActivity"></activity>
+        <activity android:theme="@style/splashScreenTheme" android:name=".AboutActivity"/>
     </application>
 
 </manifest>
